feat: implement fine-grained data permission control (row-level data scope)
- Added standard `DataScope` definitions (ALL, CUSTOM, DEPT, DEPT_AND_CHILD, SELF) in `ppmb-common-security`.
- Implemented `@DataPermission` annotation and `DataPermissionAspect` for AOP interception to resolve context into ThreadLocal.
- Created `DataPermissionSpecification` to dynamically inject JPA specifications (e.g. `deptId in (...)`, `createBy = ?`).
- Implemented `SystemDataPermissionProvider` to compute max data scope dynamically intersecting active user roles and required menu permission codes without breaking tenant isolation.
- Extensively patched `sys_user` and `sys_role` entities, added mapping table `sys_role_dept` for Custom configurations with full Liquibase scripts.
- Configured endpoints and implemented initial pilot on `UserApplicationService#pageUsers`.
- Wrote API methods for Customizing DataScopes on the Role (`RoleController`).
- Executed unit tests and fully verified local Gradle codebase using Checkstyle and Spotless.

Co-authored-by: pandaymx <82139672+pandaymx@users.noreply.github.com>